tests/invalid/duplicate_case.c
int main() {
    int x = 0;
    switch (x) {
    case 1:
        return 1;
    case 1:
        return 2;
    }
    return 0;
}
